discussion/kv_engine/179404/179404_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53531: Make accessing KVBucket::ckptDestroyerTasks entries safer

Change-Id: I13b1e3ebea3c5b16d659fa95ad50bb5a14cac56c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-08-31 12:51:14.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 13:09:02.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19876/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3904:36: error: no member named "getWaketime" in "std::shared_ptr<CheckpointDestroyerTask>"; did you mean to use "->" instead of "."? [clang-diagnostic-error]
    EXPECT_EQ(initialWaketime, task.getWaketime());
                                   ^
                                   ->
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19876/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3904:36:
error: no member named "getWaketime" in "std::shared_ptr<CheckpointDestroyerTask>"; did you mean to use "->" instead of "."? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19876/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48811/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\checkpoint_test.cc(3904): error C2039: "getWaketime": is not a member of "std::shared_ptr<CheckpointDestroyerTask>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48811/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9572/ : FAILURE

Compile error at [2022-08-31T13:02:06.150Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3904:36:
error: no member named "getWaketime" in "std::shared_ptr<CheckpointDestroyerTask>"; did you mean to use "->" instead of "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9572/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30211/ : FAILURE

Compile error at [2022-08-31T13:05:16.004Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3904:36:
error: no member named "getWaketime" in "std::shared_ptr<CheckpointDestroyerTask>"; did you mean to use "->" instead of "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30211/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22922/ : FAILURE

Compile error at [2022-08-31T13:03:03.983Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3904:36:
error: no member named "getWaketime" in "std::shared_ptr<CheckpointDestroyerTask>"; did you mean to use "->" instead of "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22922/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21830/ : FAILURE

Compile error at [2022-08-31T13:03:00.286Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3904:37:
error: ?const class std::shared_ptr<CheckpointDestroyerTask>? has no member named ?getWaketime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21830/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21123/ : FAILURE

Compile error at [2022-08-31T13:07:10.108Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3904:36:
error: no member named "getWaketime" in "std::__1::shared_ptr<CheckpointDestroyerTask>"; did you mean to use "->" instead of "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21123/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22182/ : FAILURE

Compile error at [2022-08-31T13:04:03.187Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3904:37:
error: ?const class std::shared_ptr<CheckpointDestroyerTask>? has no member named ?getWaketime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22182/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9671/ : FAILURE

Compile error at [2022-08-31T12:57:28.233Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3904:37:
error: ?const class std::shared_ptr<CheckpointDestroyerTask>? has no member named ?getWaketime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9671/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19097/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41036/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
